--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -10,20 +10,23 @@
   <div class="login">
     <form class="login-wrap">
       <img class="avatar" src="../assets/img/default.png">
-      <!-- 错误信息时展示 -->
-      <!-- <div class="alert alert-danger">
+      <!-- 有错误信息时展示 -->
+      <div class="alert alert-danger" style='display:none'>
         <strong>错误！</strong> 用户名或密码错误！
-      </div> -->
+      </div>
       <div class="form-group">
         <label for="email" class="sr-only">邮箱</label>
-        <input id="email" type="email" class="form-control" placeholder="邮箱" autofocus>
+        <input name="email" id="email" type="email" class="form-control" placeholder="邮箱" autofocus value="admin@zce.me">
       </div>
       <div class="form-group">
         <label for="password" class="sr-only">密码</label>
-        <input id="password" type="password" class="form-control" placeholder="密码">
+        <input name="password" id="password" type="password" class="form-control" placeholder="密码" value="wanglei">
       </div>
-      <a class="btn btn-primary btn-block" href="index.html">登 录</a>
+      <input type='button' class="btn btn-primary btn-block" value = '登陆'/>
     </form>
   </div>
 </body>
 </html>
+
+<script src="/assets/vendors/jquery/jquery.min.js"></script>
+<script src="/assets/js/login.js"></script>
